# picorun

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish.yaml  zizmor.yml
picorun/: __init__.py  errors.py  picorun.py
tests/: test_errors.py  test_picorun.py
