[project]
name = "picorun"
authors = [
    {name = "Dave Hall", email = "skwashd@gmail.com"},
]
description = "PicoFun runtime components"
version = "0.0.1"

dependencies = [
  "requests==2.31.0",
]

# license = {file = "LICENSE.txt"}
# readme = {file = "README.md"}

[project.optional-dependencies]
dev = [
  "black==23.7.0",
  "pytest==7.4.0",
  "pytest-cov==4.1.0",
  "pytest-mock==3.11.1",
  "ruff==0.0.284",
]

[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | \.nox
)
'''

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"

[tool.ruff]
# Rules listed at https://github.com/charliermarsh/ruff#supported-rules
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D211", "D212", "E501", "F403", "F405", "ANN101"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S108"]