[project]
name = "picorun"
authors = [
    {name = "Dave Hall", email = "skwashd@gmail.com"},
]
description = "PicoFun runtime components"

requires-python = ">=3.13"

dependencies = [
  "requests==2.32.5",
]

license = "BSD-3-Clause"
license-files = ["LICENSE"]

readme = "README.md"

dynamic = ["version"]

[dependency-groups]
dev = [
  "coverage==7.13.2",
  "pytest==9.0.2",
  "pytest-mock==3.15.1",
  "ruff==0.14.13",
]

build = [
  "build==1.4.0",
  "twine==6.2.0",
]

[build-system]
requires = [
  "setuptools==80.9.0",
  "setuptools-git-versioning==3.0.1",
  "wheel==0.45.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.coverage.report]
show_missing = true
omit = [
    ".venv/*"
]

[tool.coverage.run]
cover_pylib = false

[tool.ruff.lint]
# Rules listed at https://github.com/charliermarsh/ruff#supported-rules
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]